examples/test/testpolicy18109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18109
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key11: value3
      key8: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value34
      podSelector:
        matchLabels:
          key11: value1
          key42: value11
